AI_File_Summarier_Code_Base/force-app/main/default/objects/File_Summary__c/File_Summary__c.object-meta.xml
<CustomObject>
    <description>Stores the generated summaries of files processed by the AI</description>
    <label>File Summary</label>
    <nameField>
        <label>File Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>File Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>