AI_File_Summarier_Code_Base/force-app/main/default/objects/File_Summary__c/fields/Content_Document_Link_Id__c.field-meta.xml
<CustomField>
    <fullName>Content_Document_Link_Id__c</fullName>
    <description>Stores the Salesforce ContentDocumentLink ID associated with the file that was summarized. This field is used to reference and retrieve the original file.</description>
    <label>Content Document Link Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>