AI_File_Summarier_Code_Base/force-app/main/default/objects/File_Summary__c/fields/Is_Overall_Summary__c.field-meta.xml
<CustomField>
    <fullName>Is_Overall_Summary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this record represents the overall summary generated for the files. When unchecked, the record may represent as Individual summary.</description>
    <label>Is Overall Summary</label>
    <type>Checkbox</type>
</CustomField>