AI_File_Summarier_Code_Base/force-app/main/default/objects/File_Summary__c/fields/Parent_Object__c.field-meta.xml
<CustomField>
    <fullName>Parent_Object__c</fullName>
    <description>Stores the API name of the parent object (standard or custom) to which the AI-generated summary record is associated.</description>
    <label>Parent Object</label>
    <length>30</length>
    <type>Text</type>
</CustomField>