AI_File_Summarier_Code_Base/force-app/main/default/objects/File_Summary__c/fields/ParentId__c.field-meta.xml
<CustomField>
    <fullName>ParentId__c</fullName>
    <description
  >Stores the Salesforce record ID of the parent record associated with this file summary. This field is used to link the summarized file to its source record.</description>
    <externalId>true</externalId>
    <label>ParentId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>