AI_File_Summarier_Code_Base/force-app/main/default/objects/File_Summary__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <description>Stores the AI-generated summary of the processed file. This field contains the condensed content produced by the AI.</description>
    <label>Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>